--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <h1>Welcome to My Portfolio</h1>
 <p>Showcasing my projects in Excel, Power BI, and Python.</p>
+
+<h2>Projects</h2>
+<ul>
+  <li><a href="cricket_score_prediction/README.md">Project 1: ETL with Prediction with Python </a></li>
+  <li><a href="project2.md">Project 2: Power BI Dashboard</a></li>
+</ul>
+
+<h2>About Me</h2>
+<p>I am a data analyst with experience in Excel, Power BI, and Python. I am passionate about using data to drive decision-making and solve business challenges.</p>
