--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <h2>Projects</h2>
 <ul>
-  <li><a href="cricket_score_prediction.md">Project 1: ETL with Prediction with Python </a></li>
+  <li><a href="https://github.com/Deepali360/Descriptive-and-Predictive-Analytics/tree/main/cricket_score_prediction">Project 1: ETL & Score Prediction with Python </a></li>
   <li><a href="project2.md">Project 2: Power BI Dashboard</a></li>
 </ul>
 
