--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <ul>
   <li><a href="https://github.com/Deepali360/Descriptive-and-Predictive-Analytics/tree/main/cricket_score_prediction">Project 1: ETL & Score Prediction with Python </a></li>
   <li><a href="project2.md">Project 2: Power BI Dashboard</a></li>
-  <li><a href="https://github.com/Deepali360/Descriptive-and-Predictive-Analytics/tree/main/Landcover%20Segmentation">Project 2: Image Segmentation </a></li>
-  <li><a href="https://github.com/Deepali360/Sentiment-Analysis-_NLP: Sentiment Analysis</a></li>  
+  <li><a href="https://github.com/Deepali360/Descriptive-and-Predictive-Analytics/tree/main/Landcover%20Segmentation">Project 3: Image Segmentation </a></li>
+  <li><a href="https://github.com/Deepali360/Sentiment-Analysis-_NLP">Project 4: Sentiment Analysis</a></li>  
 </ul>
 
 <h2>About Me</h2>
